--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,25 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Choose EITHER Local OR Cloud
+# Local Server Example (replace with your device's actual IP and port)
+# SMS_GATEWAY_URL=http://192.168.1.100:8080/messages
+# SMS_GATEWAY_USER=local_username
+# SMS_GATEWAY_PASS=local_password
+
+# Cloud Server Example (or your self-hosted instance URL + /3rdparty/v1/messages)
+SMS_GATEWAY_BASE_URL=
+SMS_GATEWAY_USER=sms
+SMS_GATEWAY_PASS=
+SMS_GATEWAY_SIM_SLOT=2
+
+# --- Optional ---
+# Set the default SIM slot (1, 2, etc.). Leave blank to use default/OS selection.
+# SMS_GATEWAY_SIM_SLOT=
+# Request delivery report by default (true/false). Leave blank for app default (true).
+# SMS_GATEWAY_DELIVERY_REPORT=
+
+SMS_GATEWAY_WEBHOOK_SECRET= # Keep this secret!
+SMS_GATEWAY_WEBHOOK_TOLERANCE=300 # Optional: Seconds tolerance for timestamp validation (default 5 minutes)
+
